[package]
name = "bnymn-category"
description = "This package allows you to manage categories of any kind"
license = "MIT"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bnymn/category"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
